--- a/weapp/templates/wepage_components.html
+++ b/weapp/templates/wepage_components.html
@@ -33,6 +33,8 @@
 <script type="text/javascript" src="/termite_static/termite_js/app/component/wepage/imagedisplay/Image.js"></script>
 <script type="text/javascript" src="/termite_static/termite_js/app/component/wepage/imagedisplay/ImageDisplay.js"></script>
 
+<script type="text/javascript" src="/termite_static/termite_js/app/component/wepage/navbar/Navbar.js"></script>
+
 <!--
 <script type="text/javascript" src="/termite_static/termite_js/app/component/wepage/imageadvertisement/ImageAdvertisement.js"></script>
 -->
