后台订单页、订单详情页增加[会员详情]

--- a/weapp/mall/templates/mall/editor/audit_orders.html
+++ b/weapp/mall/templates/mall/editor/audit_orders.html
@@ -153,6 +153,7 @@
 										{{if product.promotion.type == "flash_sale"}}【限时抢购】{{/if}}
 										{{if product.promotion.type == "premium_sale:premium_product"}}【赠品】 {{/if}}
 									{{/if}}
+									{{if product.grade_discounted_money}}【会员优惠】{{/if}}
 								${product.name}
 								</span></p>
 								<p class="tl pt10">
