--- a/weapp/mall/templates/mall/editor/order_detail.html
+++ b/weapp/mall/templates/mall/editor/order_detail.html
@@ -222,6 +222,10 @@
                   {% elif product.promotion.type == 'premium_sale:premium_product' %}
                     [赠品]
                   {% endif %}
+                  {% if product.grade_discounted_money %}
+                    [会员优惠]
+                  {% endif %}
+
                   {{product.name}}</a>
                 </div>
                 <span class="ml10" style="color: red"></span>
