--- a/weapp/mall/templates/mall/editor/refund_orders.html
+++ b/weapp/mall/templates/mall/editor/refund_orders.html
@@ -143,9 +143,10 @@
 							<div style="width:235px;display:table-cell">
 								<p class="tl"><span class="xa-productName " name="xa-productName">
 									{{if product.promotion }}
-											{{if product.promotion.type == "flash_sale"}}【限时抢购】{{/if}}
-											{{if product.promotion.type == "premium_sale:premium_product"}}【赠品】 {{/if}}
-										{{/if}}
+										{{if product.promotion.type == "flash_sale"}}【限时抢购】{{/if}}
+										{{if product.promotion.type == "premium_sale:premium_product"}}【赠品】 {{/if}}
+									{{/if}}
+                                    {{if product.grade_discounted_money}}【会员优惠】{{/if}}
 									${product.name}
 								</span></p>
 								<p class="tl pt10">
