去掉个人中心退货/退款按钮

--- a/weapp/webapp/modules/user_center/templates/webapp/default_v3/user_center.html
+++ b/weapp/webapp/modules/user_center/templates/webapp/default_v3/user_center.html
@@ -84,12 +84,12 @@
                     </i>
                     <p class="em7">待评价</p>
                 </a>
-                <a class="xui-fastBtnInner disTc tc xui-oneThird" href="###">
+                <!-- <a class="xui-fastBtnInner disTc tc xui-oneThird" href="###">
                     <i class="pr">
-                        <!-- <p class="em85 xui-hintNum pa">13</p> -->
+                        <p class="em85 xui-hintNum pa">13</p>
                     </i>
                     <p class="em7">退货/退款</p>
-                </a>
+                </a> -->
             {% endif %}
             </div>
         </div>
