--- a/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_img.html
+++ b/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_img.html
@@ -23,7 +23,7 @@
     <section class="xui-header">
         <img src="{{member.user_icon}}" alt="" class="pa">
         <p class="xui-memberName">{{member.user_name | safe}}</p>
-        <p class="xui-hasRec">已推荐{{setting.count}}人扫码</p>
+        <p class="xui-hasRec"><a href='./?module=market_tool:channel_qrcode&model=settings_detail&action=get&webapp_owner_id={{request.webapp_owner_id}}&project_id=0&workspace_id=market_tool:channel_qrcode&sid={{setting.id}}&fmt={{member.token}}'>已推荐{{setting.count}}人扫码</a></p>
     </section>
     {% endif %}
 	<section>
