--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/order_detail.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/order_detail.html
@@ -153,12 +153,12 @@
             <span class="fr">-￥<span class="xa-integralMoney">{{ order.integral_money | floatformat:"2"}}</span></span>
         </p>
         {% endif %}
-        {% if order.has_promotion_saved_money %}
-        <p class="zoom">
-            <span class="fl">促销优惠</span>
-            <span class="fr">-￥<span class="">{{ order.promotion_saved_money | floatformat:"2"}}</span></span>
-        </p>
-        {% endif %}
+{#        {% if order.has_promotion_saved_money %}#}
+{#        <p class="zoom">#}
+{#            <span class="fl">促销优惠</span>#}
+{#            <span class="fr">-￥<span class="">{{ order.promotion_saved_money | floatformat:"2"}}</span></span>#}
+{#        </p>#}
+{#        {% endif %}#}
         {% if order.coupon_id %}
         <p class="zoom">
             <span class="fl">优惠劵</span>
