还原测试时修改的文件

--- a/weapp/apps/customerized_apps/vote/templates/editor/votes.html
+++ b/weapp/apps/customerized_apps/vote/templates/editor/votes.html
@@ -70,7 +70,7 @@
 	<div class="panel panel-default xui-tableBox">
 		<div class="panel-header clearfix">
 			<a href="/apps/vote/vote/" class="btn btn-success fr">
-				<span class="xui-plusBoldermr5 xui-plus-sign pr" style="">+</span> 新建投票111
+				<span class="xui-plusBoldermr5 xui-plus-sign pr" style="">+</span> 新建投票
 			</a>
 		</div>
 		
