--- a/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
+++ b/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
@@ -78,9 +78,10 @@
 		</div>
 	</div>
 	<div class="xui-tableview">
+
 		{% for channel_qrcode_member in channel_qrcode_members %}
 		<div class="xui-tableCell xa-tableCell">
-			<img class="xui-img" src="{{channel_qrcode_member.member.user_icon}" />
+			<img class="xui-img" src="{{channel_qrcode_member.member.user_icon}}" />
 			<p class="xui-p">{{channel_qrcode_member.member.username}}</p>
 			{% if not channel_qrcode_member.member.is_subscribed %}
 			<div class="xui-yellowBar">已跑路</div>
